<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyFileExplorerActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fileExplorerTitleBar"
        android:orientation="horizontal">
        <Button
            android:background="@drawable/button_clicked"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pre_dir"
            android:onClick="goBack"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/fileExplorerTitle"
            android:text="@string/file_explorer_title_read"
            android:gravity="center_horizontal"/>
        <Button
            android:background="@drawable/button_clicked"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/fileExplorerPopUpButton"
            android:text="@string/file_explorer_popup_menu_button"
            android:onClick="showPopUpMenuInFileExplorer" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fileMenuRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/fileInfoLinearLayoutTop"
        android:layout_below="@id/fileExplorerTitleBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fileInfoLinearLayoutTop"
        android:orientation="horizontal"
        android:layout_above="@id/fileInfoLinearLayoutMiddle">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/file_explorer_current_dir"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:id="@+id/currentDirTextView"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fileInfoLinearLayoutMiddle"
        android:orientation="horizontal"
        android:layout_above="@id/fileInfoLinearLayoutBelow">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"
            android:hint="@string/file_explorer_file_name_hint"
            android:id="@+id/fileNameEditText" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:hint="@string/file_explorer_file_type_hint"
            android:id="@+id/fileTypeEditText"/>
        <Button
            android:background="@drawable/button_clicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/ok_button"
            android:id="@+id/OKButton"
            android:onClick="okToOperateFile"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/fileInfoLinearLayoutBelow"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/file_explorer_encoding" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/encodingTextView"
            android:text="@string/file_explorer_encoding_unknown"/>
        <Button
            android:background="@drawable/button_clicked"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/file_explorer_not_impl"
            android:onClick="chooseCharset"/>
        <Button
            android:background="@drawable/button_clicked"
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/cancel_button"
            android:onClick="cancel"/>
    </LinearLayout>
</RelativeLayout>